--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.cloud.config.server.git.uri=https://github.com/pcuisinaud/config-repo
+spring.cloud.config.server.git.uri=https://github.com/pcuisinaud/spring-boot
+spring.cloud.config.server.git.search-paths=config-repo
 server.port=8888
