--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     -->
     <groupId>org.test</groupId>
-    <artifactId>spring-boot</artifactId>
+    <artifactId>spring-cloud</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
