--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,10 @@
     </properties>
     <modules>
         <module>config-server</module>
-        <module>eurika-server</module>
+        <module>eureka-server</module>
         <module>reservation-service</module>
         <module>reservation-client</module>
         <module>hystrix-dashboard</module>
     </modules>
-
+    
 </project>
